--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "author": "Yaroslav Vavrysh <yaruk.my@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "browserify": "^12.0.1",
+    "bootstrap": "^3.3.5",
+    "browserify": "^11.2.0",
     "gulp": "^3.9.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.0",
+    "gulp-sass": "^2.0.4",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "node-bourbon": "^4.2.3",
-    "watchify": "^3.6.0"
+    "pretty-hrtime": "^1.0.1",
+    "require-dir": "^0.3.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.4.0"
   }
 }
