--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "author": "Yaroslav Vavrysh <yaruk.my@gmail.com>",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "bootstrap": "^3.3.5",
     "browserify": "^11.2.0",
     "gulp": "^3.9.0",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-cssnano": "^2.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
