--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "bootstrap": "^3.3.5",
+    "browser-sync": "^2.11.1",
     "browserify": "^11.2.0",
     "gulp": "^3.9.0",
     "gulp-cssnano": "^2.1.0",
